k8s/beer-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: beer-service
  name: beer-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: beer-service
  strategy: {}
  template:
    metadata:
      labels:
        app: beer-service
      annotations:
        co.elastic.logs/enabled: "true"
        co.elastic.logs.json-logging/json.keys_under_root: "true"
        co.elastic.logs.json-logging/json.add_error_key: "true"
        co.elastic.logs.json-logging/json.message_key: "message"
    spec:
      containers:
        - image: springframeworkguru/kbe-brewery-beer-service
          name: kbe-brewery-beer-service
          resources: {}
          readinessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/readiness
          livenessProbe:
            httpGet:
              port: 8080
              path: /actuator/health/liveness
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"]

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: beer-service
  name: beer-service
spec:
  ports:
  - name: 8080-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: beer-service
  type: ClusterIP
status:
  loadBalancer: {}
