k8s/gateway-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gateway
  name: gateway
spec:
  ports:
  - name: 9090-9090
    port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: gateway
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gateway
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  strategy: {}
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - image: springframeworkguru/kbe-brewery-gateway
          name: kbe-brewery-gateway
          resources: {}
