k8s/inventory-failover-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: inventory-failover
  name: inventory-failover
spec:
  ports:
  - name: 8083-8083
    port: 8083
    protocol: TCP
    targetPort: 8083
  selector:
    app: inventory-failover
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: inventory-failover
  name: inventory-failover
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-failover
  strategy: {}
  template:
    metadata:
      labels:
        app: inventory-failover
      annotations:
        co.elastic.logs/enabled: "true"
        co.elastic.logs.json-logging/json.keys_under_root: "true"
        co.elastic.logs.json-logging/json.add_error_key: "true"
        co.elastic.logs.json-logging/json.message_key: "message"
    spec:
      containers:
        - image: springframeworkguru/kbe-brewery-inventory-failover
          name: kbe-brewery-inventory-failover
          resources: {}
