k8s/inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: inventory-service
  name: inventory-service
spec:
  ports:
  - name: 8082-8082
    port: 8082
    protocol: TCP
    targetPort: 8082
  selector:
    app: inventory-service
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: inventory-service
  name: inventory-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: inventory-service
  strategy: {}
  template:
    metadata:
      labels:
        app: inventory-service
      annotations:
        co.elastic.logs/enabled: "true"
        co.elastic.logs.json-logging/json.keys_under_root: "true"
        co.elastic.logs.json-logging/json.add_error_key: "true"
        co.elastic.logs.json-logging/json.message_key: "message"
    spec:
      containers:
        - image: springframeworkguru/kbe-brewery-inventory-service
          name: kbe-brewery-inventory-service
          resources: {}
          readinessProbe:
            httpGet:
              port: 8082
              path: /actuator/health/readiness
          livenessProbe:
            httpGet:
              port: 8082
              path: /actuator/health/liveness
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"]
