k8s/jms-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jms
  name: jms
spec:
  ports:
  - name: 8161-8161
    port: 8161
    protocol: TCP
    targetPort: 8161
  - name: 61616-61616
    port: 61616
    protocol: TCP
    targetPort: 61616
  selector:
    app: jms
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jms
  name: jms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jms
  strategy: {}
  template:
    metadata:
      labels:
        app: jms
    spec:
      containers:
        - image: vromero/activemq-artemis
          name: activemq-artemis
          resources: {}
