k8s/kibana-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kibana
  name: kibana
spec:
  ports:
  - name: 5601-5601
    port: 5601
    protocol: TCP
    targetPort: 5601
  selector:
    app: kibana
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kibana
  name: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: kibana
    spec:
      containers:
        - image: docker.elastic.co/kibana/kibana:7.12.1
          name: kibana
          resources: {}
