k8s/order-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: order-service
  name: order-service
spec:
  ports:
  - name: 8081-8081
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: order-service
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: order-service
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  strategy: {}
  template:
    metadata:
      labels:
        app: order-service
      annotations:
        co.elastic.logs/enabled: "true"
        co.elastic.logs.json-logging/json.keys_under_root: "true"
        co.elastic.logs.json-logging/json.add_error_key: "true"
        co.elastic.logs.json-logging/json.message_key: "message"
    spec:
      containers:
        - image: springframeworkguru/kbe-brewery-order-service
          name: kbe-brewery-order-service
          resources: {}
          readinessProbe:
            httpGet:
              port: 8081
              path: /actuator/health/readiness
          livenessProbe:
            httpGet:
              port: 8081
              path: /actuator/health/liveness
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 10"]
