k8s/ingress-deployment.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /beer
            backend:
              service:
                name: beer-service
                port:
                  number: 8080
          - pathType: Prefix
            path: /inventory
            backend:
              service:
                name: inventory-service
                port:
                  number: 8882
          - pathType: Prefix
            path: /order
            backend:
              service:
                name: order-service
                port:
                  number: 8881
